Fix for queue pool, fix for home splashscreen on mobile

--- a/app/app/static/css/style.css
+++ b/app/app/static/css/style.css
@@ -31,10 +31,17 @@ body {
 }
 
 /* Only used index.html */
+#splash-image-div{
+    min-height:60vh;
+    max-height:100vh;
+    overflow:hidden;
+    background-color: #000000;
+}
+
 #splash-image {
     width:100%;
 	height:auto;
-    max-width:3456px;
+    max-width:1920px;
     opacity:0.27;
 }
 
